# email-notify

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.py  test.ipynb
.github/workflows/: docs.yml
docs/: index.md
email_notify/: __init__.py  core.py  setup.py
email_notify.egg-info/: PKG-INFO  SOURCES.txt
email_notify/email_notify.egg-info/: PKG-INFO
